Correct z-index for title dropdown in sub-menu and dropdown hover header on scroll

--- a/client/src/sass/include/_variables.scss
+++ b/client/src/sass/include/_variables.scss
@@ -163,13 +163,13 @@ $zindex: (
   sub-menu        : 12500,
   menu            : 12600,
   search-typeahead: 12650,
-  header          : 12700,
   popover         : 13000,
   tooltip         : 14000,
   loadbar         : 15000,
   modal           : 16000,
   dropdown        : 17000,
   help-popover    : 17000,
+  header          : 17500,
   notification    : 18000,
   hotkeys         : 19000
 );
